@@ -8,6 +8,7 @@ use TestAppBuild;
 clean_install();
 set_module_dir( 't/Bar' );
 run_build_pl( '--install_base', '../test_install/remapped_cmdline',
+              '--install_path', 'libdoc=moo',
               );
 run_build();
 run_build( 'install' );
@@ -16,5 +17,5 @@ check_tree( 't/test_install/remapped_cmdline',
             { 'lib/perl/MyBar.pm' => {},
               'bin/program'       => { executable => 1 },
               'lib/perl/MyPod.pm' => {},
-              'man/MyPod.3pm'     => {},
+              'moo/MyPod.3pm'     => {},
               } );
